install process update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
-git+https://github.com/SEOULTECH-AIS-gyounghun6612/AIS_python_ex.git
+python_ex @ git+https://github.com/SEOULTECH-AIS-gyounghun6612/AIS_python_ex.git
+scipy
